--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -581,5 +581,6 @@
   "doNotHaveAnAccount": "Don’t have an account?",
   "haveANiceDay": "Have a nice day",
   "twiceBerWeek": "Twice per day",
-  "localeName": "localeName"
+  "localeName": "localeName",
+  "topSpecialists ": "Top specialists"
 }
