--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -581,6 +581,7 @@
   "twiceBerWeek": "مرتين في اليوم",
   "localeName": "اسم اللغة",
   "addMedicalHistoryMsg": "لنضف تاريخك الطبي لمساعدة الأطباء على تشخيصك بشكل صحيح.",
-  "topSpecialists": "أفضل الأخصائيين"
+  "topSpecialists": "أفضل الأخصائيين",
+  "allSpecialists": "جميع الأخصائيين"
 }
 
