--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -582,5 +582,6 @@
   "haveANiceDay": "Have a nice day",
   "twiceBerWeek": "Twice per day",
   "localeName": "localeName",
-  "topSpecialists ": "Top specialists"
+  "topSpecialists ": "Top specialists",
+  "allSpecialists": "ALL Specialists"
 }
