--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -382,10 +382,10 @@
   "chooseGender": "اختر الجنس",
   "birthDate": "تاريخ الميلاد",
   "chooseBirthDate": "اختر تاريخ الميلاد",
-  "haveMedicalInsurance": "هل لديك تأمين طبي؟*",
+  "haveMedicalInsurance": "هل لديك تأمين طبي؟",
   "maxSize": "الحد الأقصى للحجم 240 * 410",
   "dragYourImageHere": "اسحب صورتك هنا",
-  "insertYourMedicalInsuranceImage": "أدخل صورة التأمين الطبي الخاص بك *",
+  "insertYourMedicalInsuranceImage": "أدخل صورة التأمين الطبي الخاص بك",
   "verifyAccount": "تحقق من حسابك",
   "checkYourEmail": "تحقق من بريدك الإلكتروني",
   "forVerificationCode": "للحصول على رمز التحقق",
@@ -582,6 +582,50 @@
   "localeName": "اسم اللغة",
   "addMedicalHistoryMsg": "لنضف تاريخك الطبي لمساعدة الأطباء على تشخيصك بشكل صحيح.",
   "topSpecialists": "أفضل الأخصائيين",
-  "allSpecialists": "جميع الأخصائيين"
+  "allSpecialists": "جميع الأخصائيين",
+  "enterUserName": "ادخل اسم المستخدم",
+  "selectYourGender": "اختر جنسك",
+  "enterYourEmail": "أدخل بريدك الإلكتروني",
+  "addPhoto": "أضف صورة",
+  "selectDate": "اختر تاريخ",
+  "sun": "الأحد",
+  "mon": "الإثنين",
+  "tue": "الثلاثاء",
+  "wed": "الأربعاء",
+  "thu": "الخميس",
+  "fri": "الجمعة",
+  "sat": "السبت",
+  "fieldIsRequired": "هذا الحقل مطلوب",
+  "enterTheCorrectEmail": "أدخل البريد الإلكتروني الصحيح",
+  "twoPasswordsMustBeIdentical": "يجب أن تكون كلمتا المرور متطابقتين",
+  "mustContainAtLeastOneSpecialCharacter": "يجب أن تحتوي على رمز خاص واحد على الأقل",
+  "mustContainAtLeastOneNumber": "يجب أن تحتوي على رقم واحد على الأقل",
+  "mustContainAtLeastOneLowerCase": "يجب أن تحتوي على حرف صغير واحد على الأقل",
+  "mustContainAtLeastOneUppercaseLetter": "يجب أن تحتوي على حرف كبير واحد على الأقل",
+  "mustBeAtLeast8CharactersLong": "يجب أن تكون 8 أحرف على الأقل",
+  "passwordIsRequired": "كلمة المرور مطلوبة",
+  "genderIsRequired": "الجنس مطلوب",
+  "dateOfBirthIsRequired": "تاريخ الميلاد مطلوب",
+  "otpIsRequired": "رمز التحقق مطلوب",
+  "otpMustBe4Digits": "رمز التحقق يجب أن يكون 4 أرقام",
+  "phoneNumberIsRequired": "رقم الهاتف مطلوب",
+  "mustStartWith01": "يجب أن يبدأ بـ 01",
+  "phoneNumberLengthMustBe11": "يجب أن يكون رقم الهاتف 11 رقمًا",
+  "phoneNumberIsIncorrect": "رقم الهاتف غير صحيح",
+  "kMale": "ذكر",
+  "kFemale": "أنثى",
+  "nationalIdIsRequired": "الرقم القومي مطلوب",
+  "nationalIdLengthMustBe14": "يجب أن يتكون الرقم القومي من 14 رقمًا",
+  "selectYourMaritalStatus": "اختر حالتك الاجتماعية",
+  "maritalStatus": "الحالة الاجتماعية",
+  "selectCountry": "اختر الدولة",
+  "selectCity": "اختر المدينة",
+  "city": "المدينة",
+  "street": "الشارع",
+  "enterStreet": "أدخل الشارع",
+  "postalCode": "الرمز البريدي",
+  "enterPostalCode": "أدخل الرمز البريدي",
+  "selectCompany": "اختر الشركة",
+  "addressDetails": "تفاصيل العنوان"
 }
 
