--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -201,8 +201,8 @@
   "country": "Country",
   "chooseCountry": "Choose country",
   "email": "Email",
-  "phoneNumber": "Phone number",
-  "userName": "Username",
+  "phoneNumber": "Phone Number",
+  "userName": "User Name",
   "profileDetails": "Profile details",
   "medicalInsurance": "Medical insurance",
   "insuranceInformation": "Insurance information",
@@ -382,11 +382,11 @@
   "chooseGender": "Choose Your Gender",
   "relationship": "Relationship",
   "enterYourRelationship": "Enter Your Relationship",
-  "birthDate": "Birth Of Date",
+  "birthDate": "Date Of Birth",
   "imageMaxSize": "Max Size 240*410",
-  "chooseBirthDate": "Choose Your Birth Date",
+  "chooseBirthDate": "Choose Your Date Of Birth",
   "chronicDiseases": "Chronic diseases",
-  "haveMedicalInsurance": "Have Medical Insurance*",
+  "haveMedicalInsurance": "Have Medical Insurance",
   "maxSize": "Max Size 240 * 410",
   "dragYourImageHere": "Drag Your Image Here",
   "chooseDisease": "Choose Disease",
@@ -405,7 +405,7 @@
   "bloodPressure": "Blood pressure",
   "heartRate": "Heart rate",
   "chronicMedications": "Chronic Medications",
-  "insertYourMedicalInsuranceImage": "Insert Your Medical Insurance Image *",
+  "insertYourMedicalInsuranceImage": "Insert Your Medical Insurance Image",
   "verifyAccount": "Verify Your Account",
   "checkYourEmail": "Check your email",
   "forVerificationCode": "for the verification code",
@@ -583,5 +583,50 @@
   "twiceBerWeek": "Twice per day",
   "localeName": "localeName",
   "topSpecialists ": "Top specialists",
-  "allSpecialists": "ALL Specialists"
+  "allSpecialists": "ALL Specialists",
+  "enterUserName": "Enter User Name",
+  "selectYourGender": "Select your Gender",
+  "enterYourEmail": "enterYourEmail",
+  "addPhoto": "Add Photo",
+  "selectDate": "Select Date",
+  "sun": "sun",
+  "mon": "mon",
+  "tue": "tue",
+  "wed": "wed",
+  "thu": "thu",
+  "fri": "fri",
+  "sat": "sat",
+  "fieldIsRequired": "Field is required",
+  "enterTheCorrectEmail": "Enter the correct email",
+  "twoPasswordsMustBeIdentical": "Two passwords must be identical",
+  "mustContainAtLeastOneSpecialCharacter": "Must contain at least one special character",
+  "mustContainAtLeastOneNumber": "Must contain at least one number",
+  "mustContainAtLeastOneLowerCase": "Must contain at least one lower case",
+  "mustContainAtLeastOneUppercaseLetter": "Must contain at least one uppercase letter",
+  "mustBeAtLeast8CharactersLong": "Must be at least 8 characters long",
+  "passwordIsRequired": "Password is required",
+  "genderIsRequired": "Gender is required",
+  "dateOfBirthIsRequired": "Date of birth is required",
+  "otpIsRequired": "Otp is required",
+  "otpMustBe4Digits": "Otp must be 4 digits",
+  "phoneNumberIsRequired": "Phone Number is required",
+  "mustStartWith01": "Must start with 01",
+  "phoneNumberLengthMustBe11": "Phone Number length must be 11",
+  "phoneNumberIsIncorrect": "Phone Number is incorrect",
+  "kMale": "Male",
+  "kFemale": "Female",
+  "nationalIdIsRequired": "National Id is required",
+  "nationalIdLengthMustBe14": "National Id length must be 14",
+  "selectYourMaritalStatus": "Select your Marital Status",
+  "maritalStatus": "Marital Status",
+  "selectCountry": "Select Country",
+  "selectCity": "Select City",
+  "city": "City",
+
+  "street": "Street",
+  "enterStreet": "Enter Street",
+  "postalCode": "Postal Code",
+  "enterPostalCode": "Enter Postal Code",
+  "selectCompany": "Select Company",
+  "addressDetails": "Address Details"
 }
